[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://3543-2.jpg" type="Texture" id=2]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="back" type="Sprite" parent="."]
scale = Vector2( 1.2575, 1.2575 )
texture = ExtResource( 2 )
centered = false

[node name="new_game" type="LinkButton" parent="back"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 30.0
margin_right = 93.2367
margin_bottom = 32.4657
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "New game"

[node name="hall_of_fame" type="LinkButton" parent="back"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 30.3099
margin_top = 50.0
margin_right = 110.31
margin_bottom = 64.0
text = "Hall of Fame"

[node name="exit" type="LinkButton" parent="back"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 70.0
margin_right = 67.7511
margin_bottom = 85.5706
text = "Exit"
[connection signal="button_down" from="back/new_game" to="." method="_on_new_game_button_down"]
[connection signal="button_down" from="back/hall_of_fame" to="." method="_on_hall_of_fame_button_down"]
[connection signal="button_down" from="back/exit" to="." method="_on_exit_button_down"]
